add bottom bar and icon-hover effect

--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -14,18 +14,17 @@
 
 /* Home */
 .layout{
+    display: grid;
     width: 100%;
     height: 100%;
-    display: grid;
     grid-template-columns: 1fr 2fr;
-
+}
+#sidebar{
+    display: none;
 }
 .login,.reset-password{
     height: 100vh;
 }
-
-
-  
   #sidebar {
     grid-column: 1;
   }
@@ -33,4 +32,19 @@
   #dashboard {
     grid-column: 2;
   }
-  
+
+  #sidebar-menu a:hover{
+    background-color: #024A66;
+    color: #ffffff;
+
+  }
+
+
+  @media(min-width:800px){
+    #sidebar{
+        display: block;
+    }
+    .bottom-bar{
+        display: none;
+    }
+  }
