--- a/src/components/JobOffer/JobOffer.css
+++ b/src/components/JobOffer/JobOffer.css
@@ -2,4 +2,12 @@
     display: grid;
     grid-template-columns: 4fr 1fr;
     width: 100%;
+    gap: 20px;
+}
+
+.jobs{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
 }
