--- a/src/components/JobOffer/JobOffer.css
+++ b/src/components/JobOffer/JobOffer.css
@@ -11,3 +11,30 @@
     gap: 10px;
 
 }
+.pagination-list {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+  
+  }
+  
+  .pagination-item {
+    margin: 0 5px;
+    
+  }
+  
+  .pagination-link {
+    display: inline-block;
+    padding: 5px 10px;
+    background-color: #f0f0f0;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    color: #024A66;
+  }
+  
+  .pagination-item.active .pagination-link {
+    background-color: #CBD8DD;
+    color: #024A66;
+  }
