prettier+ AddJob +Apply now+ starting Project

--- a/src/components/JobOffer/JobCard/JobCard.css
+++ b/src/components/JobOffer/JobCard/JobCard.css
@@ -55,7 +55,8 @@
 .jobCard{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
+    margin-bottom: 20px;
 
 }
 .search-bar{
@@ -79,4 +80,19 @@
 .search-bar input{
     width: 100%;
     outline: none;
+}
+
+@media(max-width:800px){
+    .card-container .job-description{
+        font-size: 0.6rem;
+      }
+      .company-image img{
+        height: 60px;
+        width: 60px;
+      }
+      .card-container .btn-apply {
+        width: 60px;
+        height: 20px;
+        font-size: 0.5rem;
+      }
 }
