--- a/src/components/JobOffer/JobCard/JobCard.css
+++ b/src/components/JobOffer/JobCard/JobCard.css
@@ -9,7 +9,9 @@
     filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.2));
 }
 
-
+.company-image{
+    place-self: center;
+}
 
 .company-image img{
     height: 100px;
@@ -46,6 +48,7 @@
     border-radius: 50px;
     color: #ffff;
     font-weight: 500;
+    
 }
 
 .btn-apply:hover{
