--- a/src/components/Dashboard/DashAppStat/DashAppStat.css
+++ b/src/components/Dashboard/DashAppStat/DashAppStat.css
@@ -10,12 +10,14 @@
     filter: drop-shadow(0px 0px 15px rgba(0, 0, 0, 0.2));
     padding: 20px;
     border-radius: 10px;
+    height: 100%;
 }
 .stat{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
 }
 /* .statName p{
     display: block;
