--- a/src/components/JobOffer/JobOffer.css
+++ b/src/components/JobOffer/JobOffer.css
@@ -46,6 +46,11 @@
     }
     #jobOffer{
       display: flex;
+      padding: 10px;
+    }
+    .layout{
+      display: flex;
+      flex-direction: column;
     }
  
   
