--- a/src/components/Dashboard/DashAppStat/DashAppStat.css
+++ b/src/components/Dashboard/DashAppStat/DashAppStat.css
@@ -7,7 +7,7 @@
     font-size: 0.8rem;
     color: #024A66;
     background:#ffffff;
-    filter: drop-shadow(0px 0px 15px rgba(0, 0, 0, 0.2));
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 20px;
     border-radius: 10px;
     height: 100%;
