--- a/src/components/Dashboard/DashGallery/DashGallery.css
+++ b/src/components/Dashboard/DashGallery/DashGallery.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     background: #fff;
-    filter: drop-shadow(0px 0px 15px rgba(0, 0, 0, 0.2));
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     padding: 20px 40px;
     height: 100%;
