--- a/src/components/Dashboard/DashProject/DashProject.css
+++ b/src/components/Dashboard/DashProject/DashProject.css
@@ -9,7 +9,7 @@
     height: 100%;
     background:#024A66;
     border-radius: 10px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
+    filter: drop-shadow(0px 3px 3px #024a6679)
 }
 
 .dashProject{
