update font and filter card

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+    font-family: 'Work Sans', sans-serif;
+                                                
+}
 
 body{
     background-color: #ffffff;
